# weather_api

./: Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
weather/: settings.py  urls.py
weatherapp/: views.py
weatherapp/templates/weatherapp/: index.html
